little changes for new version

--- a/doc/html.tex
+++ b/doc/html.tex
@@ -1,5 +1,5 @@
 %
-%$Id: html.tex,v 1.1 2005-07-14 09:43:52 kbk Exp $
+%$Id: html.tex,v 1.2 2005-07-18 09:13:30 lars Exp $
 %
 
 \documentclass[a4paper,twoside]{article}
@@ -13,7 +13,7 @@
 % definitions used in the GOTM-manual
 \input definitions.tex
 
-%graphics
+% graphics
 \usepackage{graphics}
 
 % center it on a4-format
@@ -58,19 +58,19 @@ Test Case Documentation
 
 {\sf \bf \Large
  \begin{center}
-  Version 3.0
+  Version 3.2
  \end{center}
 }
 
+\vspace{8mm}
 
 \begin{figure}[!h]
   \begin{center}
-  \scalebox{0.5}{\includegraphics{\figloc{mixerA.eps}}}
+  \scalebox{0.6}{\includegraphics{\figloc{mixerA.eps}}}
   \end{center}
 \end{figure}
 
-
-%\vspace{10mm}
+\vspace{7mm}
 
 {\sf \bf \Large
  \begin{center}
@@ -114,7 +114,7 @@ Test Case Documentation
 \include{util}
 
 \include{extraIntro}
-\include{sediment}
+%\include{sediment}
 \include{seagrass}
 %\include{bio}
 
