--- a/doc/letter.tex
+++ b/doc/letter.tex
@@ -1,5 +1,5 @@
 %
-%$Id: letter.tex,v 1.1 2005-07-14 09:43:52 kbk Exp $
+%$Id: letter.tex,v 1.2 2005-07-18 09:13:30 lars Exp $
 %
 
 \documentclass[letter,twoside]{article}
@@ -57,7 +57,7 @@ Test Case Documentation
 }
 
 
-\vspace{4mm}
+\vspace{5mm}
 
 {\sf \bf \Large
  \begin{center}
@@ -65,7 +65,7 @@ Test Case Documentation
  \end{center}
 }
 
-\vspace{6mm}
+\vspace{8mm}
 
 \begin{figure}[!h]
   \begin{center}
@@ -73,7 +73,7 @@ Test Case Documentation
   \end{center}
 \end{figure}
 
-\vspace{5mm}
+\vspace{7mm}
 
 {\sf \bf \Large
  \begin{center}
@@ -127,14 +127,14 @@ Test Case Documentation
 
 \cleardoublepage
 \include{extraIntro}
-\include{sediment}
+%\include{sediment}
 \include{seagrass}
 %\include{bio}
 
 \cleardoublepage
 \include{cases}
 
-% bibliography with BibTeX:
+% Bibliography with BibTeX:
 \cleardoublepage
 \bibliographystyle{agu}
 \addcontentsline{toc}{section}{Bibliography}
