--- a/doc/definitions.tex
+++ b/doc/definitions.tex
@@ -1,5 +1,5 @@
 %
-%$Id: definitions.tex,v 1.3 2005-07-06 14:11:27 kbk Exp $
+%$Id: definitions.tex,v 1.4 2005-07-19 16:58:40 hb Exp $
 %
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
@@ -11,7 +11,7 @@
 %                                                                   %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\figloc}[1]{/home/lars/gotmTest/doc/figures/{#1}}
+\newcommand{\figloc}[1]{./figures/{#1}}
 
 % figures and tables
 \newcommand{\fig}[1]{figure {\ref{#1}}}
