removed path definition of figures

--- a/doc/definitions.tex
+++ b/doc/definitions.tex
@@ -1,5 +1,5 @@
 %
-%$Id: definitions.tex,v 1.4 2005-07-19 16:58:40 hb Exp $
+%$Id: definitions.tex,v 1.5 2005-08-11 13:55:19 lars Exp $
 %
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
@@ -10,8 +10,6 @@
 %                         LaTeX Definitions                         %
 %                                                                   %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newcommand{\figloc}[1]{./figures/{#1}}
 
 % figures and tables
 \newcommand{\fig}[1]{figure {\ref{#1}}}
