included relative path for figures

--- a/doc/a4.tex
+++ b/doc/a4.tex
@@ -1,5 +1,5 @@
 %
-%$Id: a4.tex,v 1.1 2005-07-14 09:43:52 kbk Exp $
+%$Id: a4.tex,v 1.2 2005-08-11 13:56:37 lars Exp $
 %
 
 \documentclass[a4paper,twoside]{article}
@@ -71,7 +71,7 @@ Test Case Documentation
 
 \begin{figure}[!h]
   \begin{center}
-  \scalebox{0.6}{\includegraphics{\figloc{mixerA.eps}}}
+  \scalebox{0.6}{\includegraphics{figures/mixerA.eps}}
   \end{center}
 \end{figure}
 
