--- a/doc/html.tex
+++ b/doc/html.tex
@@ -1,5 +1,5 @@
 %
-%$Id: html.tex,v 1.2 2005-07-18 09:13:30 lars Exp $
+%$Id: html.tex,v 1.3 2005-08-11 13:56:37 lars Exp $
 %
 
 \documentclass[a4paper,twoside]{article}
@@ -66,7 +66,7 @@ Test Case Documentation
 
 \begin{figure}[!h]
   \begin{center}
-  \scalebox{0.6}{\includegraphics{\figloc{mixerA.eps}}}
+  \scalebox{0.6}{\includegraphics{figures/mixerA.eps}}
   \end{center}
 \end{figure}
 
