--- a/doc/letter.tex
+++ b/doc/letter.tex
@@ -1,5 +1,5 @@
 %
-%$Id: letter.tex,v 1.2 2005-07-18 09:13:30 lars Exp $
+%$Id: letter.tex,v 1.3 2005-08-11 13:56:37 lars Exp $
 %
 
 \documentclass[letter,twoside]{article}
@@ -69,7 +69,7 @@ Test Case Documentation
 
 \begin{figure}[!h]
   \begin{center}
-  \scalebox{0.55}{\includegraphics{\figloc{mixerA.eps}}}
+  \scalebox{0.55}{\includegraphics{figures/mixerA.eps}}
   \end{center}
 \end{figure}
 
