--- a/doc/meanflowIntro.tex
+++ b/doc/meanflowIntro.tex
@@ -1,5 +1,5 @@
 %
-%$Id: meanflowIntro.tex,v 1.2 2005-07-06 14:11:27 kbk Exp $
+%$Id: meanflowIntro.tex,v 1.3 2005-08-11 13:57:07 lars Exp $
 %
 
 \section{The mean flow model \label{sec:meanflowIntro}}
@@ -138,7 +138,7 @@ means that mean flow quantities range from $i=1,..,N_i$ while
 turbulent quantities range from $i=0,..,N_i$ (see \fig{FigGrid}).
 \begin{figure}[!h]	
   \begin{center}	
-    \scalebox{0.5}{\includegraphics{\figloc{gridvert.eps}}}
+    \scalebox{0.5}{\includegraphics{figures/gridvert.eps}}
     \caption{Spatial organisation and indexing of the numerical grid.\label{FigGrid}}
   \end{center}
 \end{figure}
@@ -152,7 +152,7 @@ considered for the averaging. These can however be derived from the
 law of the wall.
 \begin{figure}
   \begin{center}
-   \scalebox{0.5}{\includegraphics{\figloc{gridtime.eps}}}
+   \scalebox{0.5}{\includegraphics{figures/gridtime.eps}}
    \caption{Temporal organisation and indexing of the numerical grid.
             Here, a time stepping slightly more implicit than the 
             \index{Crank-Nicolson scheme} \cite{CrankNicolson47} 
